<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.slini204</groupId>
    <artifactId>better-GraveStones</artifactId>
    <version>2.7.2</version>
    <packaging>jar</packaging>

    <name>better-GraveStones</name>
    <description>Gravestones with configurable loot, storage, and Locator Bar support.</description>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <paper.api.version>1.21.11-R0.1-SNAPSHOT</paper.api.version>
        <bungeecord.chat.version>1.21-R0.2</bungeecord.chat.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>sonatype-oss-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.api.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Needed for net.md_5.bungee.api.chat.* components used in GraveReloadCommand. -->
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-chat</artifactId>
            <version>${bungeecord.chat.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- This project currently uses the IntelliJ-style src/ layout. -->
        <sourceDirectory>${project.basedir}/src</sourceDirectory>

        <resources>
            <resource>
                <directory>${project.basedir}/src</directory>
                <includes>
                    <include>plugin.yml</include>
                    <include>config.yml</include>
                    <include>messages.yml</include>
                    <include>MySQL.yml</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>

        <finalName>better-GraveStones-${project.version}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Built-By>GitHub Actions</Built-By>
                            <Implementation-Title>${project.name}</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>